--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.3",
+    "multer": "^1.4.2",
+    "sharp": "^0.26.3",
     "validator": "^13.5.1"
   },
   "devDependencies": {
